Cross-platform & Linux system checking & Update version number

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,23 +3,34 @@ project(Rubik_sCube)
 
 set(VERSION_MAJOR 1)
 set(VERSION_MINOR 1)
-set(VERSION_PATCH 0)
+set(VERSION_PATCH 1)
 
 set(PROJECT_POSTFIX "-${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 set(INSTALL_NAME "Rubik's Cube")
-set(INSTALL_DIR "${PROJECT_SOURCE_DIR}/${INSTALL_NAME}${PROJECT_POSTFIX}")
+set(INSTALL_DIR "${PROJECT_SOURCE_DIR}/${INSTALL_NAME}-${CMAKE_SYSTEM_NAME}${PROJECT_POSTFIX}")
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGLEW_STATIC")
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${PROJECT_SOURCE_DIR}/RubiksCube.res")
+    set(GLEW_LIB "glew32")
+    set(OPENGL_LIB "opengl32")
+    set(FREETYPE_LIB "freetype")
+    set(Z_LIB "z")
+endif()
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -no-pie -DLINUX=1")
+    set(GLEW_LIB "GLEW.a")
+    set(OPENGL_LIB "GL")
+    set(FREETYPE_LIB "freetype.a")
+    set(Z_LIB "z.a")
 endif()
 
 file(
         GLOB srcs
         main.cpp
-        Base/FileLoader.cpp
+#        Base/FileLoader.cpp
         Base/GLBasic.cpp
         Base/RCButton.cpp
         GameLogic/Cube.cpp
@@ -52,15 +63,26 @@ link_directories(
 
 link_libraries(
         CxImage
-        glew32
+        ${GLEW_LIB}
         glfw3
-        opengl32
+        ${OPENGL_LIB}
         glm_static
-        freetype
+        ${FREETYPE_LIB}
         DLPackager
         DLFileKit
-        z
+        ${Z_LIB}
 )
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    link_libraries(
+            pthread
+            dl
+            X11
+            Xrandr
+            Xinerama
+            Xcursor
+            Xxf86vm
+    )
+endif ()
 
 add_executable(Rubik_sCube ${srcs})
 set_target_properties(Rubik_sCube PROPERTIES OUTPUT_NAME "Rubik's Cube(Bloated)")
